--- a/bot.yml
+++ b/bot.yml
@@ -1,7 +1,7 @@
 name: nodebot
 description: A simple node.js starter bot for Beep Boop
 avatar: resources/avatar.png
-#background: resources/background.png
+#background: resources/background.png lorem
 #config:
 #  - name: OPTION
 #    friendly_name: Some Unnecessary Option
